# data

./: .env.example  .gitignore  DEEP_AGENTS_PLAN.md  Dockerfile  README.md  REFACTOR_PLAN.md  check_env.py  docker-compose.yml  graph.py  langgraph.json  langgraph.json.md  pyproject.toml  requirements.txt  test_api_direct.py  test_langchain_format.py  test_service.py  test_siliconflow.py
agents/: __init__.py  data_agent.py  states.py  supervisor.py
agents/graphs/: __init__.py  react_graph.py
agents/subagents/: __init__.py  context_guardian_agent.py  data_analysis_agent.py  sql_agent.py  sql_generator_agent.py  visualization_agent.py
api/: __init__.py  main.py
api/routes/: __init__.py  chat.py  health.py  resume.py  tools.py
api/schemas/: __init__.py  request.py  response.py
config/: __init__.py  database.py  logging.py  models.py  settings.py
core/: __init__.py  exceptions.py  tool_compat.py  types.py
data_analysis_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
database/: __init__.py  connection.py
database/repositories/: __init__.py  base.py  device_repository.py
docs/: DEEP_AGENTS_ARCHITECTURE.md  DEEP_AGENTS_PLAN.md  REFACTOR_PLAN.md  SQL生成剥离改造计划.md  architecture.md  development.md  代码文件手册.md  系统功能手册.md  项目操作手册.md
filesystem/: __init__.py  composite.py
filesystem/backends/: __init__.py  (+2 more)
memory/: __init__.py  long_term.py  short_term.py  summarization.py
middleware/: __init__.py  base.py  cache_backend.py  context_edit.py  context_editor.py  filesystem.py  permissions.py  state_driven.py  subagent.py  todo_list.py  tool_auth.py  tool_cache.py  tool_runtime.py  types.py
models/: __init__.py  llm.py
scripts/: MISSING_FEATURES_PLAN.md  __init__.py  run_api.py  run_smoke.py  setup_db.py  start.sh
services/: __init__.py  cache.py  logger.py  metrics.py  monitor.py
tests/: conftest.py
tools/: __init__.py  base.py  dynamic_registry.py  registry.py
utils/: __init__.py  formatters.py  helpers.py  security.py  validators.py
(+32 files in other folders)
